[tool.poetry]
name = "serverless-model"
version = "0.1.0"
description = ""
authors = ["Suchintan Singh <suchintansingh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
banana-dev = "^5.0.2"
banana-cli = "^0.0.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
